[metadata]
name = teatime
version = 0.0.1
long_description = file: README.md
license = BSD-3-Clause
classifiers =
    License :: OSI Approved :: BSD-3-Clause License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3
install_requires = tqdm

# Do not install tqdm to have a progress bar.
[options.extras_require]
bare =

[options.entry_points]
console_scripts =
    teatime = teatime.teatime:main
